<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dismiss">Dismiss</string>
    <string name="basic_notitle">Basic (No Title)</string>
    <string name="shareLocationPrompt">This app wants to access your location.</string>
    <string name="basic_list_long">Basic Long List</string>
    <string name="states">States</string>
    <string name="custom_listitem_button">A button!</string>
    <string name="custom_adapter">Custom Adapter</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae metus nec sapien elementum interdum ac mollis tortor. Nunc porttitor metus placerat orci auctor, sed dictum magna dapibus. Morbi a lacus ante. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin posuere nisl imperdiet lectus elementum accumsan. Etiam lacinia nisi ut nulla fermentum tempus. Integer ornare lacinia diam non maximus. Vestibulum iaculis urna eu elementum scelerisque. Etiam nisl erat, bibendum vitae magna nec, convallis malesuada erat. Cras non porttitor nibh. Pellentesque rhoncus sem luctus felis tincidunt bibendum. Pellentesque vulputate eros at nulla sollicitudin volutpat. Pellentesque laoreet est sit amet erat laoreet, id molestie nulla efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed varius nisl at imperdiet facilisis.</string>
    <string name="basic_longContent">Basic (Long Content)</string>
    <string name="basic_icon">Basic (Icon)</string>
    <string name="basic_list_notitle">Basic List (No Title)</string>
    <string name="folder_chooser">Folder Chooser</string>
    <string name="showCancelDismissCallbacks">Show/Cancel/Dismiss Callbacks</string>
    <string name="changelog">Changelog</string>
    <string name="customView_webView">Custom View No Scroll #1</string>
    <string name="customView_colorChooser">Custom View No Scroll #2</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string name="color_chooser">Color Chooser</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="more_info">More Info</string>

    <string name="basic">Basic</string>
    <string name="stacked">Stacked Buttons</string>
    <string name="neutral">Neutral Button</string>
    <string name="callbacks">Callbacks</string>
    <string name="list">Basic List</string>
    <string name="singleChoice">Single Choice</string>
    <string name="multiChoice">Multi Choice</string>
    <string name="customView">Custom View</string>
    <string name="themed">Themed</string>
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="showPassword">Show password</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="socialNetworks">Social Networks</string>
    <string name="choose">Choose</string>
    <string name="speedBoost">Turn on speed boost now!</string>
    <string name="noThanks">No thanks</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>


    <string name="app_name">Leashly</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Need to Register?</string>
    <string name="contin">Continue...</string>
    <string name="email_text">E-Mail</string>
    <string name="password_register">Password</string>
    <string name="button_register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_edittext">Name</string>
    <string name="app_name_consumer">Home_Consumer</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_register">E-Mail</string>
    <string name="pass_register">Password</string>
    <string name="first_name_register">First Name</string>
    <string name="last_name_register">Last Name</string>
    <string name="address_1_register">Address 1</string>
    <string name="address_2_register">Address 2</string>
    <string name="cities_prompt">City</string>
    <string name="states_prompt">State</string>
    <string name="key_prompt">Provided key</string>
    <string name="how_do_we_get_in">How do we get in? (We\'ll help set this up!)</string>
    <string name="get_to_best_friend">Extra instructions for us to get to your best friend!</string>
    <string name="dog_1">Doggie #1</string>
    <string name="dog_2">Doggie #2</string>
    <string name="dog_3">Doggie #3</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>
    <string name="walker_app_go_active">Go Active</string>
    <string name="sort_by">Sort By:</string>
    <string name="sortby_distance">DISTANCE</string>
    <string name="sortby_experience">EXPERIENCE</string>
    <string name="sortby_ratings">RATINGS</string>
    <string name="out_of_5_selected">"(   /5)"</string>
    <string name="ratings_text">5</string>
    <string name="first_name_selected">Chase</string>
    <string name="new_walk">New Walk!</string>
    <string name="request_button">Request</string>
    <string name="walk_finished">Walk Finished!</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string-array name="cities_array">
        <item>Select City</item>
        <item>Chicago</item>
    </string-array>
    <string-array name="states_array">
        <item>Select State</item>
        <item>IL</item>
    </string-array>
    <string-array name="keys_array">
        <item>Provided key</item>
        <item>Doorman with key</item>
        <item>Intercom</item>
        <item>Other</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="who_going_out">Who\'s going out?</string>
    <string name="any_more">Are there any more directions?</string>
    <string name="start_walk">Start Walk</string>

</resources>
