<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark" />

    <RelativeLayout
        android:id="@+id/rel_second"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:visibility="invisible">

        <CheckBox
            android:id="@+id/dog1_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="34dp"
            android:checked="true"
            android:text="Dog1"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/dog2_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dog1_check"
            android:checked="true"
            android:text="Dog2"
            android:visibility="invisible" />

        <CheckBox
            android:id="@+id/dog3_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dog2_check"
            android:checked="true"
            android:text="Dog3"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/who_going_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:text="@string/who_going_out"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/any_more_deets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dog3_check"
            android:layout_marginTop="33dp"
            android:text="@string/any_more"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/addtl_instructs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/any_more_deets"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"
            android:nestedScrollingEnabled="true" />

        <Button
            android:id="@+id/start_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/start_walk" />
    </RelativeLayout>
</RelativeLayout>